[gd_scene load_steps=2 format=3 uid="uid://bx2nrhdupapn0"]

[ext_resource type="Script" uid="uid://t2wn2vrxp4xy" path="res://Online/v7_Online_ClienteOnline_Version2.gd" id="1_cliente"]

[node name="ClienteOnline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cliente")

[node name="Fondo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.243137, 0.313726, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TituloOnline" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "üë• CLIENTE MULTIJUGADOR"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Tu nombre:"

[node name="CampoNombre" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Ingresa tu nombre..."

[node name="BotonConectar" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "üîå Conectar"

[node name="EstadoConexion" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "üî¥ Desconectado"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "üë• Jugadores Online"
horizontal_alignment = 1

[node name="ListaJugadores" type="ItemList" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="LabelInstrucciones" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "üí° Haz clic en un jugador para invitarlo a jugar"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BotonVolver" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "üîô Volver"

[node name="PanelInvitacion" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelInvitacion"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelInvitacion" type="Label" parent="PanelInvitacion/VBoxContainer"]
layout_mode = 2
text = "Invitaci√≥n recibida"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelInvitacion/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BotonAceptar" type="Button" parent="PanelInvitacion/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "‚úÖ Aceptar"

[node name="BotonRechazar" type="Button" parent="PanelInvitacion/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "‚ùå Rechazar"
